--- a/package.json
+++ b/package.json
@@ -2,22 +2,12 @@
   "name": "obs-overlay-lib",
   "version": "1.0.0",
   "description": "",
-  "main": "obs-overlay.js",
+  "main": "lib/obs-overlay.js",
   "directories": {
     "lib": "lib"
   },
-  "scripts": {
-    "build:w": "parcel watch obs-overlay.js --no-cache",
-    "build": "parcel obs-overlay.js --no-cache"
-  },
+  "scripts": {},
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "lit-html": "^1.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "parcel-bundler": "^1.12.3"
-  }
+  "license": "ISC"
 }
